--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 <body>
   <h1>Test World!</h1>
-    <h2>Lorem ipsum.</h2>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Blanditiis corporis deleniti dicta id incidunt
-        ipsam laborum mollitia quam, repudiandae sunt tempore
-        ullam. Aliquam dolorem facilis iste, omnis qui quod
-        voluptate.</h3>
+    <h2>ПРИВЕТ</h2>
+
 </body>
 </html>
