--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Test World!</h1>
     <h2>ПРИВЕТ</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, consectetur!</p>
 
 </body>
 </html>
